--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,6 @@
-streamlit
-pandas
-sqlalchemy
-altair
-streamlit-authenticator
 streamlit>=1.42
 authlib>=1.3.2
-gspread>=6.0.0
-gspread_dataframe>=3.3.1
+psycopg2-binary
+sqlalchemy
+pandas
+altair
